# Sem_4_Task_2

./: Autotest.h  CIntN.cpp  CIntN.h  CMakeLists.txt  Create.cpp  Create.h  main.cpp
